# mini_emscripten

./: .gitignore  CMakeLists.txt  build.bat  build.sh  index.html  readme.md  wasm.html
.github/workflows/: build-ci.yml
src/: calc.cpp  calc.hpp  test.cpp
